Modificaciones de estilos

--- a/tienda/src/app/components/productos/index-producto/index-producto.component.html
+++ b/tienda/src/app/components/productos/index-producto/index-producto.component.html
@@ -153,17 +153,17 @@
                     <div class="d-flex align-items-center mt-3">
                       <div class="w-50">
                         <div class="form-group position-relative mb-0 mr-1">
-                          <input type="number" name="minPrice"
+                          <input type="text" name="minPriceStr"
                             style="font-weight:bold; text-align: center; font-size: 15px;" disabled 
-                            [(ngModel)]="filter_producto.minPrice"
+                            [(ngModel)]="filter_producto.minPriceStr"
                             class="form-control form-control-sm cs-range-slider-value-min">
                         </div>
                       </div>
                       <div class="w-50">
                         <div class="form-group position-relative mb-0 ml-1">
-                          <input type="number" name="maxPrice"
+                          <input type="text" name="maxPriceStr"
                             style="font-weight:bold;text-align: center; font-size: 15px;" disabled 
-                            [(ngModel)]="filter_producto.maxPrice"
+                            [(ngModel)]="filter_producto.maxPriceStr"
                             class="form-control form-control-sm cs-range-slider-value-max">
                         </div>
                       </div>
