--- a/tienda/src/app/components/productos/index-producto/index-producto.component.html
+++ b/tienda/src/app/components/productos/index-producto/index-producto.component.html
@@ -78,7 +78,7 @@
               <div class="card-header py-3" id="filter-panel">
                 <h6 class="accordion-heading">
                   <a href="#filter" role="button" data-toggle="collapse" aria-expanded="false" class="collapsed" aria-controls="filter">
-                    Buscar vehiculo
+                    Buscar producto
                     <span class="accordion-indicator"></span>
                   </a>
                 </h6>
@@ -86,7 +86,7 @@
               <div class="collapse " id="filter" aria-labelledby="filter-panel">
                 <div class="cs-widget pl-1 pb-4 mt-n3">
                   <div class="input-group-overlay d-lg-block d-none order-lg-3 mt-3">
-                    <input class="form-control appended-form-control" type="text" placeholder="Buscar vehiculo"
+                    <input class="form-control appended-form-control" type="text" placeholder="Buscar producto"
                       name="filter_producto" [(ngModel)]="filter_producto.titulo">
                     <div class="input-group-append-overlay"
                       style="cursor:pointer; color:white !important; background: #17696a !important;"
@@ -104,7 +104,7 @@
                 <h6 class="accordion-heading">
                   <a href="#category" role="button" data-toggle="collapse" aria-expanded="false" class="collapsed"
                     aria-controls="category">
-                    Marca
+                    Categoría
                     <span class="accordion-indicator"></span>
                   </a>
                 </h6>
