--- a/admin/src/app/components/config/config.component.html
+++ b/admin/src/app/components/config/config.component.html
@@ -39,50 +39,10 @@
             <div class="form-group row align-items-center">
               <label class="col-md-3 col-form-label font-weight-medium" for="text-input">Categorías</label>
               <div class="col-md-9">
-                <input class="form-control" type="text" id="text-input" placeholder="Marca" name="titulo_cat"
+                <input class="form-control" type="text" id="text-input" placeholder="Titulo" name="titulo_cat"
                   [(ngModel)]="titulo_cat">
 
               </div>
-              <!-- <div class="col-md-5">
-               <div class="custom-file">
-                <input class="custom-file-input" type="file" id="file-input">
-                <label class="custom-file-label" id="portadaText" for="file-input"
-                  style="white-space:nowrap; overflow:hidden">Seleccionar imagen</label>
-              </div>
-              <input class="form-control" type="text" id="text-input" placeholder="Modelo" name="icono_cat" [(ngModel)]="icono_cat">
-            </div> -->
-              <!-- <div class="col-md-5">
-                Inline radio buttons 
-                <div class="cntr">
-                  <label for="rdo-1" class="btn-radio cursor">
-                    <input type="radio" id="rdo-1" value="vehiculo" name="tipo" name="tipo_cat" [(ngModel)]="tipo_cat"
-                      class="form-control">
-                    <svg width="20px" height="20px" viewBox="0 0 20 20">
-                      <circle cx="10" cy="10" r="9"></circle>
-                      <path
-                        d="M10,7 C8.34314575,7 7,8.34314575 7,10 C7,11.6568542 8.34314575,13 10,13 C11.6568542,13 13,11.6568542 13,10 C13,8.34314575 11.6568542,7 10,7 Z"
-                        class="inner"></path>
-                      <path
-                        d="M10,1 L10,1 L10,1 C14.9705627,1 19,5.02943725 19,10 L19,10 L19,10 C19,14.9705627 14.9705627,19 10,19 L10,19 L10,19 C5.02943725,19 1,14.9705627 1,10 L1,10 L1,10 C1,5.02943725 5.02943725,1 10,1 L10,1 Z"
-                        class="outer"></path>
-                    </svg>
-                    <label for="rdo-1" class="cursor">Vehiculo</label>
-                  </label>
-                  <label for="rdo-2" class="btn-radio cursor">
-                    <input type="radio" id="rdo-2" value="producto" name="tipo" name="tipo_cat" [(ngModel)]="tipo_cat">
-                    <svg width="20px" height="20px" viewBox="0 0 20 20">
-                      <circle cx="10" cy="10" r="9"></circle>
-                      <path
-                        d="M10,7 C8.34314575,7 7,8.34314575 7,10 C7,11.6568542 8.34314575,13 10,13 C11.6568542,13 13,11.6568542 13,10 C13,8.34314575 11.6568542,7 10,7 Z"
-                        class="inner"></path>
-                      <path
-                        d="M10,1 L10,1 L10,1 C14.9705627,1 19,5.02943725 19,10 L19,10 L19,10 C19,14.9705627 14.9705627,19 10,19 L10,19 L10,19 C5.02943725,19 1,14.9705627 1,10 L1,10 L1,10 C1,5.02943725 5.02943725,1 10,1 L10,1 Z"
-                        class="outer"></path>
-                    </svg>
-                    <label for="rdo-2" class="cursor">Producto</label>
-                  </label>
-                </div>
-              </div> -->
               <div class="col-md-3">
               </div>
               <div class="col-md-9">
@@ -94,8 +54,7 @@
                     <thead class="thead-dark">
                       <tr>
 
-                        <th>Marca</th>
-                        <!-- <th>Tipo</th> -->
+                        <th>Titulo</th>
                         <th></th>
 
                       </tr>
