--- a/tienda/src/app/components/productos/index-producto/index-producto.component.html
+++ b/tienda/src/app/components/productos/index-producto/index-producto.component.html
@@ -220,14 +220,18 @@
                 <div class="d-flex align-items-center mb-2 pb-1">
                   <div class="row">
                     <div class="col-12">
-                      <a href="">{{item.categoria}}</a>
+                      <span>{{item.categoria}}</span>
                     </div>
                   </div>
                 </div>
-                <button type="button" class="btn btn-primary btn-block">
+                <!-- <button type="button" class="btn btn-primary btn-block" *ngIf="!btn_cart">
                   <i class="cxi-cart align-middle mt-n1 mr-2"></i>
-                  Add to cart
+                  Agregar al carrito
                 </button>
+                <button type="button" class="btn btn-primary" *ngIf="btn_cart btn-block" disabled>
+                  <span class="spinner-grow spinner-grow-sm mr-2" role="status" aria-hidden="true"></span>
+                  Agregando...
+                </button> -->
               </div>
             </div>
           </div>
