--- a/tienda/src/app/components/productos/detail-producto/detail-producto.component.html
+++ b/tienda/src/app/components/productos/detail-producto/detail-producto.component.html
@@ -93,6 +93,8 @@
           </div>-->
           <div class="col-lg-2 col-4 order-lg-3 order-3">
             <div class="form-group">
+              <label for="size">Cantidad</label>
+
               <!--TODO: ESTE SELECT DEBERÍA SER DINAMICO O INFORMAR DE UNA MANERA DIFERENTE (COMO LA HACE MELI)-->
               <select class="form-control custom-select" id="select-input" name="cantidad" [(ngModel)]="carrito_data.cantidad">
                 <option value="1">1</option>
