--- a/tienda/src/app/components/usuario/siderbar/siderbar.component.html
+++ b/tienda/src/app/components/usuario/siderbar/siderbar.component.html
@@ -11,13 +11,13 @@
       </div>
       <div id="account-menu" class="collapse d-lg-block">
         <div class="list-group list-group-flush border-top">
-          <a [routerLink]="['/cuenta/perfil']" routerLinkActive="active"  class="list-group-item list-group-item-action d-flex align-items-center">
+          <a [routerLink]="['/cuenta/perfil']" routerLinkActive="active" class="list-group-item list-group-item-action d-flex align-items-center">
             <i class="cxi-profile font-size-lg mr-2"></i>
             <span>Mi perfil</span>
           </a>
-          <a href="account-orders.html" class="list-group-item list-group-item-action d-flex align-items-center">
+          <a [routerLink]="['/cuenta/direcciones']" routerLinkActive="active" class="list-group-item list-group-item-action d-flex align-items-center">
             <i class="cxi-bag font-size-lg mr-2"></i>
-            <span>My orders</span>
+            <span>Mis direcciones</span>
           </a>
           <a href="account-wishlist.html" class="list-group-item list-group-item-action d-flex align-items-center">
             <i class="cxi-heart font-size-lg mr-2"></i>
