--- a/tienda/src/app/components/carrito/carrito.component.html
+++ b/tienda/src/app/components/carrito/carrito.component.html
@@ -22,25 +22,14 @@
       <div class="col-lg-8 pr-lg-6">
         <div class="d-flex align-items-center justify-content-between pb-2 mb-4">
           <h1 class="mb-0">Checkout</h1>
-          <a [routerLink]="['/']" routerLinkActive="router-link-active" ><strong>Regresar a la tienda</strong></a>
-        </div>
-
-        <!-- Alert -->
-        <div class="alert alert-info mb-4" role="alert">
-          <div class="media align-items-center">
-            <i class="cxi-profile lead mr-3"></i>
-            <div class="media-body">
-              Already have an account?&nbsp;&nbsp;<a href="#modal-signin" class="alert-link" data-toggle="modal"
-                data-view="#modal-signin-view">Sign in</a>&nbsp;&nbsp;for faster checkout experience.
-            </div>
-          </div>
+          <a [routerLink]="['/']" routerLinkActive="router-link-active"><strong>Regresar a la tienda</strong></a>
         </div>
 
         <hr class="border-top-0 border-bottom pt-2 mb-4">
 
         <!-- Order review -->
         <h2 class="h4 mb-4">1. Detalle del carrito</h2>
-        <div class="bg-secondary rounded mb-5">
+        <div class="bg-secondary rounded mb-5 collapsed" data-toggle="collapse">
           <!-- Item -->
           <div class="media px-2 px-sm-4 py-4 border-bottom" *ngFor="let item of carrito_arr">
             <a [routerLink]="['/productos/', item.producto.slug]" style="min-width: 80px;">
@@ -50,7 +39,8 @@
               <div class="d-sm-flex">
                 <div class="pr-sm-3 w-100" style="max-width: 16rem;">
                   <h3 class="font-size-sm mb-3">
-                    <a [routerLink]="['/productos/', item.producto.slug]"  class="nav-link font-weight-bold">{{item.producto.titulo}}</a>
+                    <a [routerLink]="['/productos/', item.producto.slug]"
+                      class="nav-link font-weight-bold">{{item.producto.titulo}}</a>
                   </h3>
                   <ul class="list-unstyled font-size-xs mt-n2 mb-2" *ngIf="item.variedad != ''">
                     <li class="mb-0">
@@ -69,7 +59,8 @@
                   </div>
                 </div>
                 <div class="d-flex align-items-center flex-sm-column text-sm-center ml-sm-auto pt-3 pt-sm-0">
-                  <button class="btn btn-outline-primary btn-sm mr-2 mr-sm-0" (click)="eliminar_item(item._id)">Quitar</button>
+                  <button class="btn btn-outline-primary btn-sm mr-2 mr-sm-0"
+                    (click)="eliminar_item(item._id)">Quitar</button>
                   <button class="btn btn-link btn-sm text-decoration-none pt-0 pt-sm-2 px-0 pb-0 mt-0 mt-sm-1">
                     Favoritos
                     <i class="cxi-star ml-1" style="margin-bottom: 4px;"></i>
@@ -81,125 +72,80 @@
         </div>
 
         <!-- Adresses -->
-        <h2 class="h4 mb-4">2. Shipping &amp; Billing Address</h2>
+        <h2 class="h4 mb-4">2. Dirección de envío</h2>
         <div class="row pb-3">
-          <div class="col-sm-6 form-group">
-            <label for="ch-fn">First Name</label>
-            <input type="text" class="form-control form-control-lg" id="ch-fn" placeholder="Your first name">
-          </div>
-          <div class="col-sm-6 form-group">
-            <label for="ch-ln">Last Name</label>
-            <input type="text" class="form-control form-control-lg" id="ch-ln" placeholder="Your last name">
-          </div>
-          <div class="col-sm-6 form-group">
-            <label for="ch-email">Email</label>
-            <input type="email" class="form-control form-control-lg" id="ch-email" placeholder="Your email address">
-          </div>
-          <div class="col-sm-6 form-group">
-            <label for="ch-phone">Phone</label>
-            <input type="text" class="form-control form-control-lg" id="ch-phone" placeholder="Your phone number">
-          </div>
-          <div class="col-sm-6 form-group">
-            <label for="ch-country">Country</label>
-            <select id="ch-country" class="custom-select custom-select-lg">
-              <option value="" disabled selected>Choose country</option>
-              <option value="argentina">Australia</option>
-              <option value="brazil">Brazil</option>
-              <option value="belgium">Belgium</option>
-              <option value="france">France</option>
-              <option value="germany">Germany</option>
-              <option value="uk">United Kingdom</option>
-              <option value="usa">USA</option>
-            </select>
-          </div>
-          <div class="col-sm-6 form-group">
-            <label for="ch-city">City</label>
-            <select id="ch-city" class="custom-select custom-select-lg">
-              <option value="" disabled selected>Choose city</option>
-              <option value="belgium">Brussels</option>
-              <option value="germany">Berlin</option>
-              <option value="uk">London</option>
-              <option value="argentina">Melbourne</option>
-              <option value="usa">New York</option>
-              <option value="france">Paris</option>
-              <option value="brazil">Rio de Janeiro</option>
-            </select>
-          </div>
-          <div class="col-sm-6 form-group">
-            <label for="ch-address">Address</label>
-            <input type="text" class="form-control form-control-lg" id="ch-address" placeholder="Street, appartment...">
-          </div>
-          <div class="col-sm-6 form-group">
-            <label for="ch-zip">ZIP Code</label>
-            <input type="text" class="form-control form-control-lg" id="ch-zip" placeholder="ZIP code">
-          </div>
-          <div class="col-12 form-group">
-            <div class="custom-control custom-checkbox">
-              <input type="checkbox" class="custom-control-input" id="same-details" checked>
-              <label for="same-details" class="custom-control-label">Billing and Shipping details are the same</label>
-            </div>
+          <div class="col-12">
+            <ng-container *ngIf="direccion_princial == undefined">
+              <div class="card">
+                <div class="card-body">
+                  <div class="row" style="justify-content: center;">
+                    <h4 class="text-muted">No tiene una dirección principal</h4>
+                  </div>
+                </div>
+              </div>
+            </ng-container>
+            <ng-container *ngIf="direccion_princial != undefined">
+              <div class="card">
+                <div class="card-body">
+                  <div class="row" >
+                    <div class="col-lg-9">
+                      <dt>Destinatario</dt>
+                      <dd>{{direccion_princial.destinatario}}</dd>
+                    </div>
+                    <div class="col-lg-3">
+                      <dt>Teléfono</dt>
+                      <dd>{{direccion_princial.telefono}}</dd>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body">
+                  <div class="row" >
+                    <div class="col-lg-9">
+                      <dt>Dirección</dt>
+                      <dd>{{direccion_princial.direccion}} - {{direccion_princial.pais}}
+                        <span *ngIf="direccion_princial.region">
+                          - {{direccion_princial.region}}
+                        </span>
+                        <span *ngIf="direccion_princial.provincia">
+                          - {{direccion_princial.provincia}}
+                        </span>
+                        <span *ngIf="direccion_princial.ciudad">
+                          - {{direccion_princial.ciudad}}
+                        </span>.
+                      </dd>
+                    </div>
+                    <div class="col-lg-3">
+                      <dt>Código postal</dt>
+                      <dd>{{direccion_princial.zip}}</dd>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </ng-container>
           </div>
         </div>
 
         <hr class="mb-4 pb-2">
 
         <!-- Shipping -->
-        <h2 class="h4 mb-4">3. Shipping Method</h2>
-        <div class="custom-control custom-radio mb-3">
+        <h2 class="h4 mb-4">3. Métodos de envío</h2>
+        <div class="custom-control custom-radio mb-3" *ngFor="let item of envios">
           <input type="radio" class="custom-control-input" id="courier" name="shipping" checked>
           <label for="courier" class="custom-control-label d-flex align-items-center">
             <span>
-              <strong class="d-block">Courier to your address</strong>
-              <span class="text-muted font-size-sm">Estimated date: November 9</span>
+              <strong class="d-block">{{item.titulo}}</strong>
+              <span class="text-muted font-size-sm">{{item.tiempo}}</span>
             </span>
-            <span class="ml-auto">$25.00</span>
-          </label>
-        </div>
-        <div class="custom-control custom-radio mb-3">
-          <input type="radio" class="custom-control-input" id="store-pickup" name="shipping">
-          <label for="store-pickup" class="custom-control-label d-flex align-items-center">
-            <span>
-              <strong class="d-block">Pick up from store</strong>
-              <span class="text-muted font-size-sm">Pick up on November 8 from 12:00pm</span>
-            </span>
-            <span class="ml-auto">Free</span>
-          </label>
-        </div>
-        <div class="custom-control custom-radio mb-3">
-          <input type="radio" class="custom-control-input" id="ups" name="shipping">
-          <label for="ups" class="custom-control-label d-flex align-items-center">
-            <span>
-              <strong class="d-block">UPS Ground Shipping</strong>
-              <span class="text-muted font-size-sm">Up to one week</span>
-            </span>
-            <span class="ml-auto">$10.00</span>
-          </label>
-        </div>
-        <div class="custom-control custom-radio mb-3">
-          <input type="radio" class="custom-control-input" id="locker-pickup" name="shipping">
-          <label for="locker-pickup" class="custom-control-label d-flex align-items-center">
-            <span>
-              <strong class="d-block">Pick up at Createx Locker</strong>
-              <span class="text-muted font-size-sm">Pick up on November 8 from 12:00pm</span>
-            </span>
-            <span class="ml-auto">$8.50</span>
-          </label>
-        </div>
-        <div class="custom-control custom-radio mb-3">
-          <input type="radio" class="custom-control-input" id="global-export" name="shipping">
-          <label for="global-export" class="custom-control-label d-flex align-items-center">
-            <span>
-              <strong class="d-block">Createx Global Export</strong>
-              <span class="text-muted font-size-sm">3-4 days</span>
-            </span>
-            <span class="ml-auto">$15.00</span>
+            <span class="ml-auto">${{item.precio}}</span>
           </label>
         </div>
 
         <hr class="border-top-0 border-bottom pt-4 mb-4">
 
         <!-- Payment -->
-        <h2 class="h4 pt-2 mb-4">4. Payment Method</h2>
+        <h2 class="h4 pt-2 mb-4">4. Método de pago</h2>
         <div class="row pb-4">
           <div class="col-lg-7">
             <div class="accordion-alt" id="payment-methods">
@@ -299,7 +245,7 @@
       <!-- Order totals (sticky sidebar) -->
       <!-- For more sticky sidebar options visit https://abouolia.github.io/sticky-sidebar/#options -->
       <aside class="col-lg-4">
-        <div class="sidebar-sticky" >
+        <div class="sidebar-sticky">
           <div class="sidebar-sticky-inner">
             <div class="form-group">
               <label for="promo-code">Apply a promo code</label>
